sass/main.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

/* 
Table of Contents
======================
➡ variables
➡ Global Styles
➡ Wrapper
➡ Nav Bar
➡ Hero
➡ About
➡ Projects
➡ Contact
➡ Fotter
➡ Media Query
*/

$prmy-color: #02c39a;
$scry-color1: #ffffff;
$scry-color2: #000000;

$box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);

$fontSize1: 2rem;
$fontSize2: 1.5rem;
$fontSize3: 1.2rem;
$fontSize4: 1rem;
$fontSize5: 0.8rem;

//Gobal Styles starts
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  background-color: $scry-color1;
  font-family: 'Roboto', sans-serif;
  color: $prmy-color;
  line-height: 1.6;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

section {
  padding: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 1rem;
}

//global styles ends

//wrapper section starts
.wrapper {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0 0.4rem;
}
//wrapper section ends

//header section starts
header {
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  z-index: 1000;

  .brand {
    position: relative;
    display: flex;
    align-items: center;
    align-items: center;
    width: 100%;

    img {
      width: 4rem;
      height: auto;
      margin-left: 20%;
    }
  }

  .nav {
    display: flex;
    justify-content: center;
    align-items: center;

    ul {
      display: flex;
      align-items: center;
      justify-content: center;
      margin-right: 4rem;

      li {
        cursor: pointer;
        color: $scry-color1;
        font-size: $fontSize4;
        margin: 0 1rem;

        &:hover {
          color: $scry-color2;
          transform: scale(1.2);
          transition: 0.4s;
        }

        &:focus {
          color: $scry-color2;
          transform: scale(1.2);
          transition: 0.4s;
        }

        a {
          font-size: 1.5rem;
          font-weight: 900;
          margin: 0 1rem;
          letter-spacing: 0.4rem;
          transition: all 0.4s ease-in-out;
        }
      }
    }
  }
}
//stcky-nav
.sticky-nav {
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.8);
  background: $scry-color1;

  .nav > ul > li {
    color: $scry-color2;
  }
}
//header section ends

// Hero Section starts
.hero {
  position: relative;
  width: 100%;
  height: 100vh;
  background: url('../assets/svg/simple_shiny.svg') no-repeat center center;
  background-size: cover;

  .hero-container {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    height: 100%;
    padding-top: 3rem;
    border: solid 2px blue;

    .hero-left {
      border: solid 2px yellow;
      color: $scry-color2;

      ul {
        display: flex;
        justify-content: space-evenly;
        align-items: center;
        li {
          font-size: 1.4rem;
        }
      }
    }

    .hero-righ {
      width: 40%;
      height: auto;
      border: solid 2px red;

     

      img {
        z-index: -1000;
      }
    }
  }
}
// Hero Section ends

//About Section starts
.about {
  background-color: $prmy-color;
  display: flex;
  justify-self: center;
  align-items: center;
  height: 100vh;
}
//About Section ends

//Projects Section starts
.projects {
  background-color: $scry-color1;
  display: flex;
  justify-self: center;
  align-items: center;
  height: 100vh;
}
//Projects Section ends

//Contact Section starts
.contact {
  background-color: $prmy-color;
  display: flex;
  justify-self: center;
  align-items: center;
  height: 100vh;
  // margin: 0 2rem;
}
//Contact Section ends

//Footer Section starts
.footer {
  background-color: $scry-color2;
  display: flex;
  justify-self: center;
  align-items: center;
  height: 10vh;
}
//Footer Section ends

// Mobile menu
.mobileMenu {
  display: none;
  margin: 0 auto;
  cursor: pointer;

  div {
    width: 2.4rem;
    height: 0.4rem;
    background-color: $scry-color1;
    margin: 0.2rem;
    transition: all 0.4s ease-in-out;
  }
}

.open .bar1 {
  -webkit-transform: rotate(-45deg) translate(-0.4rem, 0.4rem);
  transform: rotate(-45deg) translate(-0.4rem, 0.4rem);
}

.open .bar2 {
  opacity: 0;
}

.open .bar3 {
  -webkit-transform: rotate(45deg) translate(-0.4rem, -0.5rem);
  transform: rotate(45deg) translate(-0.4rem, -0.5rem);
}

//Media Query starts

//Tablets
@media only screen and (max-width: 768px) {
  .wrapper {
    padding: 0;
    header {
      .brand {
        margin-left: 1.4rem;
      }
      ul {
        gap: 0.4rem;
        a {
          gap: 1rem;
        }
      }
    }
  }
}

//Mobile
@media only screen and (max-width: 600px) {
  a {
    color: $scry-color2;
  }
  .sticky-nav {
    color: $scry-color2;
  }

  .wrapper {
    padding: 0 0.16rem;

    header {
      background: $prmy-color;
      height: fit-content;
      padding-bottom: 2rem;

      .mobileMenu {
        display: block;
      }
      .nav {
        .navMenu {
          background: $prmy-color;
          position: fixed;
          right: 0;
          left: -100%;
          top: 4rem;
          gap: 0;
          display: flex;
          flex-direction: column;
          width: 100%;
          text-align: center;
          transition: 0.6s;

          &.open {
            left: 0;
          }
          li {
            margin: 0.6rem 0;
            font-size: $fontSize3;
          }
        }
      }
    }
  } //wrapper
}
//Media Query ends

